--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 
 # Pull in SDK (must be before project)
+set(PICO_SDK_FETCH_FROM_GIT 1)
 include(pico_sdk_import.cmake)
 
 project(LarrysPasswordHolder C CXX ASM)
